# Parrot

./: .env  .envrc  .gitignore  12hourly.txt  CLAUDE.md  README.md  anthropic_client.py  app.py  assistant.py  assistant_experimental.py  config.py  conversations.db  copy-repo.sh  datetime_tools.py  decorators.py  ethos.md  forecast.txt  forecast_12.txt  hourly.txt  llm_client.py  main.py  navigation_tools.py  nominatim_client.py  notes.md  nyc.txt  points.txt  pyproject.toml  schemas.py  settings.json  sms_gateway.py  sms_gateway_client.py  sms_gateway_functions.py  sms_webhooks.py  spec.md  test.txt  typed_forecast.txt  typed_forecast_12.txt  valhalla_client.py  weather_client.py  weather_tools.py
src/hub/: Claude.md  app.py  compose.template.yml  config.py  debug_snapshot.sh  dependencies.py  deploy.sh  inspect_interaction.sh  lifespan.py  logging_middleware.py  pyproject.toml  rw_lock.py  settings.json  system_prompt.md  system_prompt.py
src/hub/assistant/: agent.py  dependencies.py  tool_wrapper.py
src/hub/clients/: cron_runner.py  sms_proxy.py  weather.py
src/hub/database/: manager.py
src/hub/integrations/: citi_bike.py  cron_runner.py  nominatim.py  sms_proxy.py
src/hub/qa/: eval.py  scenarios.json
src/hub/routes/: assistant.py  health.py  webhook.py
src/hub/schemas/: interaction.py  navigation.py  sms.py  weather.py
src/hub/tests/: test_assistant.py  test_citi_bike_client.py  test_cron_runner.py  test_datetime_tool.py  test_navigation_tool.py  test_nominatim_client.py  test_tool_wrapper.py  test_valhalla_client.py  test_weather_client.py  utils.py  (+1 more)
(+114 files in other folders)
