[project]
name = "ludd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.62.0",
    "httpx>=0.28.1",
    "litestar>=2.16.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]
