[project]
name = "parrot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mirascope[anthropic]>=1.0.0",
    "httpx>=0.28.1",
    "litestar>=2.16.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "timezonefinder>=6.5.2",
    "pytz>=2024.2",
    "dynaconf>=3.2.11",
    "aiosqlite>=0.21.0",
    "aiosqlitepool>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
